Added a cat image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,21 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool huh?</p>
-<a><a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>
+			Test Page
+		</title>
+	</head>
+
+	<body>
+		<h1>Hey. I'm a big heading</h1>
+		
+		<p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
+		
+		<a><a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+		
+		<p>My name is: <br>
+		Dragon</p>
+		
+		<img src="https://imageio.forbes.com/specials-images/imageserve/636412da7159dc490c067f57/HBO-s-House-of-the-Dragon/960x0.jpg?format=jpg&width=960">
+	</body>
+</html>
