Created a css test html page and css file

--- a/test.html
+++ b/test.html
@@ -11,11 +11,11 @@
 		
 		<p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
 		
-		<a><a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+		<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
 		
 		<p>My name is: <br>
 		Dragon</p>
 		
-		<img src="https://imageio.forbes.com/specials-images/imageserve/636412da7159dc490c067f57/HBO-s-House-of-the-Dragon/960x0.jpg?format=jpg&width=960">
+		<img src="https://imageio.forbes.com/specials-images/imageserve/636412da7159dc490c067f57/HBO-s-House-of-the-Dragon/960x0.jpg?format=jpg&width=960" alt="Nada">
 	</body>
 </html>
