--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Eddy Gordo</title>
 	<link rel="icon" href="img/eddie-avatar.png">
+	<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Pacifico&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/character.css">
 </head>
 
 <body>
@@ -19,7 +21,7 @@
 		<h2>About Eddy</h2>
 		<p>Eddy is cool! He is a 64-bit video game fighter who whoops ass!</p>
 		<img src="img/eddy-big.jpeg" alt="none">
-		<p>Eddy and his friends</p>
+		<p class="caption">Eddy and his friends</p>
 		
 		<!-- Characteristcs -->
 		<h2>Eddy's Characteristics</h2>
